// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSubscriptionModal /> should display image 1`] = `
<img
  alt="automation features"
  class="image"
  src="foo.png"
/>
`;

exports[`<AutomationSubscriptionModal /> should display loader 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  I am sure
</button>
`;

exports[`<AutomationSubscriptionModal /> should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<AutomationSubscriptionModal /> should render for customers already with full add-on features 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Manage Automate
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="cancel-automation-addon-modal-body"
            >
              <div
                class="container"
                data-testid="automationModalDescription"
              >
                <div
                  class="card"
                >
                  <div
                    class="alert info alert"
                  >
                    <div
                      class="iconContainer"
                    >
                      <i
                        class="material-icons icon"
                      >
                        auto_awesome
                      </i>
                    </div>
                    <div
                      class="content"
                    >
                      <span
                        class="label"
                      >
                        Unlock these features by subscribing to
                         
                        <strong>
                          Automation
                        </strong>
                      </span>
                    </div>
                  </div>
                  <div
                    class="features"
                  >
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons"
                      >
                        contact_support
                      </i>
                      <div>
                        Automate FAQs and product recommendations
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons-outlined"
                      >
                        assignment_return
                      </i>
                      <div>
                        Automate order tracking and return/cancellation requests
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons"
                      >
                        insights
                      </i>
                      <div>
                        Measure automation performance with a powerful dashboard
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card"
                >
                  <div
                    class="cardHeader"
                  >
                    <div
                      class="title"
                    >
                      Select a plan
                    </div>
                    <a
                      href="https://www.gorgias.com/pricing"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      See Plans Details
                    </a>
                  </div>
                  <div
                    class="selectedPlan"
                  >
                    <div
                      class="selector"
                    >
                      <div>
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <div
                              class="select dropdown-toggle selectFullWidth"
                            >
                              <span
                                class="label"
                                style="min-width: 10px; opacity: 1;"
                              >
                                30
                              </span>
                              <input
                                autocomplete="chrome-off"
                                class="input"
                                id="priceSelect"
                                style="min-width: 10px;"
                                type="text"
                                value=""
                              />
                              <i
                                class="material-icons dropdownIcon"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            class="options optionsFullWidth dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            
                            <button
                              class="option option--focused dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                30
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                190
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530+
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="counter"
                      >
                        <div>
                          automated interactions
                          /
                          month
                        </div>
                        <i
                          class="material-icons"
                          id="priceSelectInfo"
                        >
                          info_outlined
                        </i>
                      </div>
                    </div>
                    <div
                      class="planPrice"
                    >
                      <strong>
                        $30
                        /
                        month
                      </strong>
                    </div>
                  </div>
                  <div
                    class="payment"
                  >
                    <div
                      class="container loader"
                    >
                      <div
                        class="inner"
                        style="min-height: auto;"
                      >
                        <i
                          class="icon-custom icon-circle-o-notch md-spin"
                          style="font-size: 40px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer footerUnsubscribe modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                Cancel subscription
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill secondary medium"
                type="button"
              >
                OK
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`<AutomationSubscriptionModal /> should render the modal 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Subscribe to Automate
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="manage-automation-addon-modal-body"
            >
              <div
                class="container"
                data-testid="automationModalDescription"
              >
                <div
                  class="card"
                >
                  <div
                    class="alert info alert"
                  >
                    <div
                      class="iconContainer"
                    >
                      <i
                        class="material-icons icon"
                      >
                        auto_awesome
                      </i>
                    </div>
                    <div
                      class="content"
                    >
                      <span
                        class="label"
                      >
                        Unlock these features by subscribing to
                         
                        <strong>
                          Automation
                        </strong>
                      </span>
                    </div>
                  </div>
                  <div
                    class="features"
                  >
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons"
                      >
                        contact_support
                      </i>
                      <div>
                        Automate FAQs and product recommendations
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons-outlined"
                      >
                        assignment_return
                      </i>
                      <div>
                        Automate order tracking and return/cancellation requests
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons"
                      >
                        insights
                      </i>
                      <div>
                        Measure automation performance with a powerful dashboard
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card"
                >
                  <div
                    class="cardHeader"
                  >
                    <div
                      class="title"
                    >
                      Select a plan
                    </div>
                    <a
                      href="https://www.gorgias.com/pricing"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      See Plans Details
                    </a>
                  </div>
                  <div
                    class="selectedPlan"
                  >
                    <div
                      class="selector"
                    >
                      <div>
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <div
                              class="select dropdown-toggle selectFullWidth"
                            >
                              <span
                                class="label"
                                style="min-width: 10px; opacity: 1;"
                              >
                                30
                              </span>
                              <input
                                autocomplete="chrome-off"
                                class="input"
                                id="priceSelect"
                                style="min-width: 10px;"
                                type="text"
                                value=""
                              />
                              <i
                                class="material-icons dropdownIcon"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            class="options optionsFullWidth dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            
                            <button
                              class="option option--focused dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                30
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                190
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530+
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="counter"
                      >
                        <div>
                          automated interactions
                          /
                          month
                        </div>
                        <i
                          class="material-icons"
                          id="priceSelectInfo"
                        >
                          info_outlined
                        </i>
                      </div>
                    </div>
                    <div
                      class="planPrice"
                    >
                      <strong>
                        $30
                        /
                        month
                      </strong>
                    </div>
                  </div>
                  <div
                    class="payment"
                  >
                    <div
                      class="container loader"
                    >
                      <div
                        class="inner"
                        style="min-height: auto;"
                      >
                        <i
                          class="icon-custom icon-circle-o-notch md-spin"
                          style="font-size: 40px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <div>
                <button
                  aria-disabled="true"
                  class="wrapper fill primary medium isDisabled"
                  type="button"
                >
                  I am sure
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
